# uos-ai

./: CMakeLists.txt  translate_generation.sh
.github/workflows/: upload.yml
debian/: changelog  control  rules
ocr/: CMakeLists.txt
plugin-tray/: CMakeLists.txt
src/: CMakeLists.txt
src/audiowizard/modelwrapper/common/: asrmodel.cpp  asrmodel.h
src/audiowizard/modelwrapper/ifly/: asriflymodel.cpp  asriflymodel.h
src/audiowizard/wrapper/: asrwrapper.cpp  asrwrapper.h
src/chatbot/: channelmanager.cpp  chatbotconfig.cpp  chatbotconfig.h  chatbotservice.h  wechatqrloginclient.cpp  wechatqrloginclient.h
src/chatbot/channels/: wechatchannel.cpp  wechatchannel.h
src/dbs/dbwrapper/: daoclient.cpp  daoclient.h  daoutil.cpp  daoutil.h
src/dbus/: audiodbusinterface.cpp
src/gui/mgmt/private/: chatbotplatformdialog.cpp  chatbotplatformdialog.h  chatbotwidget.cpp  wechatqrlogindialog.cpp  wechatqrlogindialog.h
translations/: uos-ai-assistant_zh_CN.ts
